<resources>
    <string name="app_name">CinemaCat</string>
    <string name="film_name">Puss in Boots: The Last Wish </string>
    <string name="Information_film">The legendary Puss in Boots faces his greatest challenge yet—he has used up eight of his nine lives. To set things right, he embarks on a perilous journey to find the Wishing Star. But along the way, he must face old foes, new trials, and an unstoppable pursuer—Death itself.</string>
    <string name="select_your_cinema">Select your cinema!</string>
    <string name="i_m_ready_to_order">I\'m ready to order!</string>
    <string name="choose_the_best_day">Choose the best day!</string>
    <string name="you_chose_the_date">You chose the date:</string>
    <string name="choose_your_ticket_for_the_best_movie">Choose your ticket for the best movie!</string>
    <string name="adult">Adult</string>
    <string name="txt_plus">+</string>
    <string name="txt_minus">-</string>
    <string name="minus">-</string>
    <string name="txt_zero">0</string>
    <string name="child">Child</string>
    <string name="only_with_a_student_card">*Only with a student card</string>
    <string name="only_for_children_under_12_years">Only for children under 12 years</string>
    <string name="wow_it_s_my_favorite_movie">Wow! It\'s my favorite movie!</string>
    <string name="it_s_look_like_very_cool">It\'s look like very cool!</string>
    <string name="ssss_soo_scray_wolf">Ssss.soo..Scray wolf...</string>
    <string name="love_you">Love you!</string>
    <string name="todo">TODO</string>
    <string name="cool_it_s_a_great_place">Cool! It\'s a great place :)</string>
    <string name="you_chose_a_perfect_day">You chose a perfect day!</string>
    <string name="i_m_not_a_pillow_you_know">I’m not a pillow, you know!</string>
    <string name="i_m_not_your_stress_ball">I’m not your stress ball!</string>
    <string name="hey_hands_off_i_need_my_personal_space">Hey, hands off! I need my personal space!</string>
    <string name="don_t_squeeze_me_like_that">Don\'t squeeze me like that!</string>
    <string name="meow_meow_meow">Meow, meow, meow!</string>
    <string name="time_10_20">10:20</string>
    <string name="time_14_45">14:45</string>
    <string name="time_19_30">19:30</string>
    <string name="cool_one_more_adult_is_going_to_the_movies">Cool! One more adult is going to the movies!</string>
    <string name="why_don_t_they_want_to_go_to_the_movies">Why don’t they want to go to the movies?</string>
    <string name="oh_you_can_t_remove_1_adult">Oh... You can\'t remove -1 adult...</string>
    <string name="wow_children_will_love_this_movie">" Wow! Children will love this movie!"</string>
    <string name="oh_no_why_don_t_they_want_to_go_to_the_movies">Oh no! Why don’t they want to go to the movies?</string>
    <string name="oh_you_can_t_remove_1_child">Oh... You can\'t remove -1 child...</string>
    <string name="hey_i_hope_they_don_t_skip_any_lessons">" Hey! I hope they don’t skip any lessons..."</string>
    <string name="oh_no_why_don_t_they_want_to_go_to_the_movie">Oh no! Why don\'t they want to go to the movie?</string>
    <string name="oh_you_can_t_remove_1_student">Oh... You can\'t remove -1 student...</string>
    <string name="hey_you_have_your_discount">Hey, you have your discount!</string>
    <string name="i_m_ready_to_order_with_a_discount">I\'m ready to order with a discount!</string>
    <string name="you_haven_t_taken_any_tickets">You haven’t taken any tickets!</string>
    <string name="you_haven_t_chosen_a_date">You haven’t chosen a date!</string>
    <string name="you_haven_t_chosen_a_time">You haven’t chosen a time!</string>
    <string name="you_haven_t_chosen_a_cinema">You haven’t chosen a cinema!</string>
    <string name="your_order_is_ready">Your order is ready!</string>
    <string name="we_will_contact_you_for_further_assistance"> We will contact you </string>
    <string name="space" />
    <string name="amount_of_tickets">Amount of tickets :</string>
    <string name="time">Time :</string>
    <string name="date">Date :</string>
    <string name="your_cinema">Your cinema :</string>
    <string name="ready_to_order">Ready to order ?</string>
    <string name="total_price">Total price :</string>
    <string name="i_m_ready_to_go_to_the_cinema">I\'m ready to go to the cinema</string>
    <string name="additionally">Additionally :</string>
    <string name="wow_look_at_this_food_you_can_tap_it_and_take_a_discount">Wow ! Look at this food ! You can tap it and take a discount !</string>
    <string name="i_don_t_want_to_take_a_discount">I don\'t want to take a discount!</string>
    <string name="your_discount_10">Your Discount -10%</string>
    <string name="we_don_t_have_any_movies_in_this_time">We don\'t have any movies in this time</string>
    <string name="subtitles_for_hearing_impaired_guests">Subtitles for hearing-impaired guests</string>
    <string name="audio_description_for_visually_impaired_guests">Audio description for visually impaired guests</string>
    <string name="wheelchair_accessibility">Wheelchair accessibility</string>
    <string name="do_you_have_any_special_requirements_we_should_consider_for_your_visit_to_the_cinema">Do you have any special requirements we should consider for your visit to the cinema?</string>
    <string name="_0">0</string>
    <string name="total_tickets">Total tickets:</string>
    <string name="student">Student</string>
    <string name="_45">45 ₪</string>
    <string name="only_for_18">Only for 18+</string>
    <string name="_70">70 ₪</string>
    <string name="time_evening">19:30</string>
    <string name="time_day">14:45</string>
    <string name="time_morning">10:20</string>
    <string name="it_s_a_time_to_choosea_time">It\'s a time to choosea time !</string>
    <string name="_35">35₪</string>
    <string name="order_is_ready_see_you_soon">Order is ready! See you soon!</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_cinemacat">Your CinemaCat!</string>
    <string name="cinemacat_holon">CinemaCat Holon</string>
    <string name="cinemacat_haifa">CinemaCat Haifa</string>
    <string name="cinemacat_tel_aviv">CinemaCat Tel Aviv</string>
    <string name="cinemacat_jerusalem">CinemaCat Jerusalem</string>
    <string name="cinemacat_raanana">CinemaCat Raanana</string>
    <string name="cinemacat_beer_sheva">CinemaCat Beer Sheva</string>

</resources>