<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"

    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="15dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/your_discount_10" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textSize="20sp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:text="@string/wow_look_at_this_food_you_can_tap_it_and_take_a_discount" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_cat"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/img_cat_cool" />

            <Button
                android:id="@+id/btn_no_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_background"
                android:padding="10dp"
                android:layout_margin="7dp"
                android:text="@string/i_don_t_want_to_take_a_discount"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>


    <ImageButton
        android:id="@+id/img_btn_food"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:background="#00FFFFFF"
        android:layout_weight="1"
        app:srcCompat="@drawable/img_cat_food" />

</LinearLayout>