<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1C2366"
            >

            <!-- ToolBar widget -->

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/dialog_frame" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/app_name"
                android:textColor="#ffff"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton2"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                app:layout_constraintTop_toTopOf="parent" />



            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/dialog_frame"

                 />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/img_back_frame_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/img_back_frame_1" />

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/img_back_frame_2" />

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/img_back_frame_3" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:scaleType="centerCrop"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/img_back_frame_4" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/film_name"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/Information_film" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_your_cinema"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerCinema"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="#00FFFFFF"
                        />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_the_best_day"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:minDate="01/03/2025"
                        android:maxDate="30/04/2025"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_chose_day"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/you_chose_the_date"
                            />

                        <TextView
                            android:id="@+id/txt_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text=""
                            android:textStyle="bold" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_chose_ticket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/choose_your_ticket_for_the_best_movie" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt_adult"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:text="@string/adult" />

                            <TextView
                                android:id="@+id/txt_adult_price"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="70" />

                            <Button
                                android:id="@+id/button10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:layout_marginStart="10dp"
                                android:text="@string/minus" />

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txt_zero" />

                            <Button
                                android:id="@+id/button13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.1"
                                android:text="@string/txt_plus" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt_student"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="Student" />

                            <TextView
                                android:id="@+id/txt_student_price"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"

                                android:text="45" />

                            <Button
                                android:id="@+id/btn_student_ticket_minus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/minus" />

                            <TextView
                                android:id="@+id/txt_student_ticket_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txt_zero" />

                            <Button
                                android:id="@+id/btn_student_ticket_plus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txt_plus" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:textColor="#BF0000"
                            android:text="@string/only_with_a_student_card" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt_child"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/child" />

                            <TextView
                                android:id="@+id/txt_child_price"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="35" />

                            <Button
                                android:id="@+id/btn_child_ticket_minus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/minus" />

                            <TextView
                                android:id="@+id/txt_child_ticket_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txt_zero" />

                            <Button
                                android:id="@+id/btn_child_ticket_plus"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/txt_plus" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="10sp"
                            android:textColor="#BF0000"
                            android:layout_weight="1"
                            android:text="@string/only_for_children_under_12_years" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="7dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/img_cat_cool" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="Meaw, meaw, meaw.." />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#1C2366"
                    android:text="@string/i_m_ready_to_order" />
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>


</LinearLayout>